# DesignSystem

malachite/: Cargo.toml  utils.rs
malachite/components/: accordion.rs  alert.rs  badge.rs  button.rs  card.rs  carousel.rs  dropdown.rs  input.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  popover.rs  progress_bar.rs  table.rs  tabs.rs  tooltip.rs
malachite/src/: lib.rs
malachite/styles/: animation.rs  border.rs  color.rs  mod.rs  spacing.rs  theme.rs  typography.rs
malachite/utils/: event.rs  hooks.rs
