[package]
name = "design_system"
version = "0.1.0"
edition = "2021"
description = "A design system library in Rust"
license = "MIT"
authors = ["Votre Nom <votre.email@example.com>"]
repository = "https://github.com/votre-utilisateur/design_system"
homepage = "https://github.com/votre-utilisateur/design_system"
documentation = "https://docs.rs/design_system"
readme = "README.md"

[dependencies]
